--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
         <li><a href="<%= url_for :locale => 'gr' %>">Ελληνικά</a></li>
         <li><a href="<%= url_for :locale => 'it' %>">Italiano</a></li>
         <li><a href="<%= url_for :locale => 'pl' %>">Polski</a></li>
+        <li><a href="<%= url_for :locale => 'pt' %>">Português</a></li>
       </ul>
       <h1><a href="/"><%= APP_CONFIG[:project_name] %></a></h1>
     </div><!-- header -->
