--- a/app/views/site/index.gl.html.erb
+++ b/app/views/site/index.gl.html.erb
@@ -2,24 +2,77 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "Enchendo este formulario", message_path %> lle farás chegar un correo teu ás/ e os representantes de tu país no Parlamento  Europeo na tua propia língoa. Pregámosche que o fagas con moito respeto e  claridade. O obxectivo desta ferramenta é que a europarlamentaria ou o  europarlamentario en concreto,  lle chegue unha mensaxe única e escrita coas  tuas propias verbas, sin empregar o método do "copia e pega".</p>
+<p><b>Envía unha mensaxe aos teus representantes no
+Parlamento Europeo para que se pronuncien inmediatamente e esixan a
+Marrocos que respecte os dereitos do pobo saharauí</b></p>
 
-<p>O día dez de outubro comezou unha grande protesta pacífica, na que  máis de 20.000 saharauís reivindicaban o seu dereito ao traballo, á non  discriminación e ao usufructo dos seus recursos naturais, establecendo  un campamento de 7000 jaimas a 15 kilómetros da cidade de El Aaiún.  30 días despois o goberno de Marrocos ordeou ao seu exército  o asalto  e a destrucción do campamento saharauí de Agdaym Iziken. Teñénse contabilizado 28  persoas mortas, 723 feridas e 159 desaparecidas, sin contar a quenes  se atopan nos cuarteis militares ou a cadea, nin nos  hospitais.</p>
+<ul>
+<li>Envía  <a href="http://www.sahararights.net/message"> a túa mensaxe</a></li>
+<li><a href="http://www.sahararights.net/integrate">Integra</a> o formulario na túa web</li>
+</ul>
 
-<p>Ao mesmo tempo, as forzas de ocupación teñen instigado e armado a  colonos da cidade de El Aaiún que, xunto cos policías de paisano,  asaltan domicilios, negocios e queiman vehículos de propiedade  saharauí.  O exército marroquino ven de declarar o Estado de sitio nos Territorios  Ocupados do Sáhara Occidental.</p>
+<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE
+sahara" width="350" />Esta é unha campaña de emerxencia para esixir aos Europarlamentarios
+do teu país que actúen inmediatamente polo Sahara: Enchendo <a
+href="http://www.sahararights.net/message">este formulario</a>
+enviarás automaticamente un correo ás/os representantes do teu país no
+Parlamento Europeo na túa propia lingua.</p>
 
-<p>Non existe a opción do silencio como non existe a posibilidade de  frear as xustas demandas do pobo saharauí. O que sí existe é a  posibilidade de protexer a quenes están a sofrer a represión. Por elo  temos creado esta ferramenta, para facer chegar por todos os canles  posibeis a demanda universal de xustiza, dignidade e respeto pola  vida de quenes hoxe son perseguidos e perseguidas por militares profesionais e grupos paramilitares a través das rúas de El Aaiún. Entre todos/as  os/as que empreguemos esta ferramenta podemos colaborar para esixir ao  Europarlamento que se pronuncie.</p>
+<p>O obxectivo desta ferramenta é que a europarlamentaria ou
+europarlamentario en cuestión reciba unha mensaxe única e escrita coas
+túas propias palabras, sen utilizar o método "copia e pega".</p>
 
-<p>Propostas a ter en conta na redacción da tua mensaxe:    
-   <ul>
-      <li>Explícalles con brevidade coas tuas propias verbas o que está a suceder, cóntalles como te sintes e que é o que deberían de facer no teu nome.</li>
-      <li>Pídelles que lle esixan ao goberno marroquino o cese da  violencia que está a exercer contra da población saharauí nos  Territorios Ocupados do Sáhara Occidental.</li>
-      <li>Explícalles coas tuas propias verbas que a ONU ten de tomar  cartas no asunto facendo cumplir o artigo 2 da Declaración  Universal dos Dereitos do Home, así como as resolucións adoptadas  para os Territorios Non Autónomos.</li>
-      <li>Explícalles que teñen que pedir á ONU que o Consello de  Seguridade lle outorgue á MINURSO a capacidade de controlar o respeto dos Dereitos  Humáns, informando directamente ao Consello de Seguridade.</li>
-      <li>Recórdalles que a ONU ten a obriga de protexer á  población dun Territorio Non Autónomo, mentras permanece á espera  da celebración do seu Referéndo de Autodeterminación, en conformidade  coas Resolucións da Asamblea Xeral, do Consello de Seguridade e  da Unión Africana.</li>
-      <li>Reclama ao Goberno de Zapatero que deteña de inmediato a  venta de armas ao goberno alauita, coas que o exército de ocupación  asesiña, tortura e reprime ao pobo saharauí.</li>
-      <li>Pídelles que levanten a sua voz para permitir a entrada de civís  que poidan facer o labor de observación internacional, ao mesmo que o  libre acceso da prensa.</li>
-      <li>Esíxelles que se pronuncien diante do Parlamento Europeo,  demandando a intervención deste e do resto da comunidade  internacional.</li>
-      <li>Pídelles que esixan a liberación inmediata dos/das saharauís  detidos/as ilegalmente, son centos de persoas desaparecidas ou detidas.</li>
-   </ul>
-</p>
+<p>Escribe de xeito sinxelo e natural e sobre todo, por favor, faino con
+moito respecto e claridade, só así nos farán caso.</p>
+
+<p>Unha vez enchido o formulario, o teu texto será enviado ás contas de
+correo dos/ás  representantes do teu país no Parlamento Europeo.</p>
+
+<p>Tamén podes copiar este pequeno <a href="http://www.sahararights.net/integrate">código HTML</a> e pegalo
+na túa web para integrar o formulario e ser miles de webs e blogs
+solicitando o envío.</p>
+
+<p>Creamos esta ferramenta para transmitir por todas as canles
+posibles a demanda universal de xustiza, dignidade e respecto pola
+vida dos que hoxe son perseguidas por militares profesionais e
+cuadrillas paramilitares a través das rúas Do Aaiún.</p>
+
+<p>Entre todos os que usemos esta ferramenta podemos colaborar para
+esixir ao Europarlamento que se pronuncie. Se reciben centos de miles
+de correos non poderán silenciarnos.</p>
+
+
+<p>Propostas a ter en conta na redacción da tua mensaxe:</p>
+
+<ul>
+<li>Explícalles brevemente coas túas propias palabras o que está
+sucedendo, cóntalles como te sentes e que deberían facer no teu nome.</li>
+
+<li>Pídelles que lle esixan ao goberno marroquí o cesamento da
+violencia que está a exercer contra a poboación saharauí nos
+Territorios Ocupados do Sahara Occidental.</li>
+
+<li>Esíxelles que se pronuncien ante o Parlamento Europeo, demandando a
+intervención deste e do resto da comunidade internacional.</li>
+
+<li>Pídelles que esixan a liberación inmediata dos saharauís detidos
+ilegalmente, hai centos de persoas desaparecidas-detidas.</li>
+
+<li>Explícalles coas túas propias palabras que a ONU debe de tomar
+cartas no asunto facendo cumprir o artigo 2 da Declaración Universal
+dos Dereitos Humanos, así como as resolucións adoptadas para os
+Territorios No Autónomos.</li>
+
+<li>Explícalles que deben pedir á ONU que o Consello de Seguridade
+outorgue á MINURSO a capacidade de monitorizar os Dereitos Humanos,
+informando directamente o Consello de Seguridade.</li>
+
+<li>Recórdalles que a ONU ten a obriga de protexer a poboación dun
+Territorio No Autónomo, mentres permanecen á espera da celebración do
+Referendo de Autodeterminación, en conformidade coas Resolucións da
+Asemblea Xeral, do Consello de Seguridade e da Unión Africana.</li>
+
+<li>Pídelles que alcen a voz para permitir a entrada de civís que poidan
+facer o labor de observación internacional, o igual que o libre acceso
+á prensa.</li>
+</ul>
