--- a/app/views/mailman/send_activation_code.gr.text.erb
+++ b/app/views/mailman/send_activation_code.gr.text.erb
@@ -1,6 +1,9 @@
-Κάποιος (πιθανότατα εσείς) ζήτησε να αποσταλεί ένα ηλεκτρονικό μήνυμα
-στα μέλη του Ευρωπαικού κοινοβουλίου. Παρακαλώ επιβεβαιώστε
-ακολουθόντας τον σύνδεσμο:
+Κάποιος (πιθανότατα εσείς) έχει ζητήσει την αποστολή ενός ηλεκτρονικού μηνύματος στα μέλη του Ευρωπαικού κοινοβουλίου. Παρακαλώ επιβεβαιώστε ακολουθόντας αυτ
+όν το σύνδεσμο:
 
 <%= "http://#{APP_CONFIG[:domain]}/activate/#{@activation_code}" %>
 
+
+Παρακαλώ λάβετε υπ'οψιν ότι το μήνυμα *δεν* θα αποσταλεί μέχρι την επιβεβαίωση!
+
+Εάν δεν έχετε ζητήσει τέτοια αποστολή, αγνοήστε το μήνυμα.
