Dutch translation done.

--- a/app/views/message/_message_intro.nl.html.erb
+++ b/app/views/message/_message_intro.nl.html.erb
@@ -1,6 +1,2 @@
 <p id="message_intro">
-By filling this form you will send an e-mail, in your own language, to
-all of your country's representatives in the European Parliament. Ask them to require the
-Moroccan government the cessation of all kind of violence against the
-Sahrawi population, and <%= link_to "your own demands", root_url %>.
-Please be polite in order to get your petitions heard.</p>
+Door dit formuiler in te vullen stuur je een email in je eigen taal aan de vertegenwoordigers van jouw eigen land in het Europarlement. Vraag ze om de Marokkaanse regering te verzoeken om al het geweld tegen de Sahrawi-bevolking te stoppen, en  <%= link_to "je eigen verzoeken", root_url %>. Wees alsjeblieft netjes en beleefd, om de kans te vergroten dat je bericht gelezen wordt.</p>
