--- a/app/views/pages/integrate.nl.html.erb
+++ b/app/views/pages/integrate.nl.html.erb
@@ -2,16 +2,6 @@
 
 <h2><%= link_to t(:integrate_the_form_in_your_website), integrate_path %></h2>
 
-<p>Your website can actively participate: be a part of the net of blogs and
-websites that ask for sending emails to stop the massacre that is being
-held in the Sahara.</p>
+<p>Jouw website kan actief meedoen aan de campagne: word een deel van de groep weblogs en sites die dit formulier bevat en dus petities verstuurd aan het Europarlement. Doe mee en stop het bloedbad in de Westelijke Sahara!</a>
 
-<p>If you want to embed this form into your website, just create a new
-entry in your blog (Wordpress, Drupal, SPIP or any other) explaining the
-campaign. Then copy the following 
-<a href="/resources/htmlformen.txt">HTML code</a> in this new entry (take into
-account that you might need to enable "full html" code). It is important
-to ask for politeness and clarity in their messages (they are sent from
-the user's own email address) in order to increase their effectiveness.
-Please keep your blog entry visible during the lenght of the campaign.</p>
-
+<p>Als je dit formulier in wilt voegen in je website, kan je gewoon een nieuwe post aan in je weblog (Wordpress, Drupal, SPIP of andere) waarin je uitlegt wat de campagne precies inhoudt. Daarna kan je de volgende <a href="/resources/htmlformnl.txt">HTML-code</a> in je weblog-berichtje invoegen (je moet misschien de optie "volledige HTML" inschakelen). Het is belangrijk dat je vraagt om beleefdheid en helderheid in de emails die verzonden gaan worden, om de effectiviteit te vergroten. Houd alsjeblieft het weblog-berichtje zichtbaar zo lang de campange duurt.</p>
