--- a/app/views/pages/stats.nl.html.erb
+++ b/app/views/pages/stats.nl.html.erb
@@ -2,12 +2,6 @@
 
 <h2><%= link_to t(:stats), stats_path %></h2>
 
-<p>Right now, <%= @senders %> European Union citizens have already sent their message to our representatives. That sums up <%= @messages %> messages delivered to the European Parliament.</p>
+<p>Op dit moment hebben <%= @senders %>Europese burgers al een bericht verstuurd aan hun vertegenwoordigers in het Europarlement. In totaal zijn dat <%= @messages %> berichten.</p>
 
-<p>These statistics only include messages that have been confirmed
-and consequently sent.<br />
-If you've completed the form, remember that <b>your message will not be sent
-until you confirm it</b>. To do so simply visit the link
-we have sent to you by email (if you do not see it, look at the
-spam folder.)</p>
-
+<p>Deze statistieken bevatten alleen de berichten die bevestigd zijn en dus aangekomen zijn bij de Europarlementariërs. <b>Nadat je je bericht getypt hebt in het formulier wordt het pas verzonden als je het bevestigd hebt middels de bevestigings-email</b>. Mocht je de bevestigings-email niet gezien hebben kijk dan in je Spam-mapje in je email.<p>
