--- a/app/views/site/index.nl.html.erb
+++ b/app/views/site/index.nl.html.erb
@@ -2,6 +2,12 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
+<p><b>Stuur een bericht naar de vertegenwoordigers van jouw land in het Europarlement, waarin je ze vraagt om onmiddelijk in actie te komen tegen het geweld wat wordt toegepast door Marokko in de Westelijke Sahara.</b></p>
+<ul>
+<li>Stuur <a href="http://www.sahararights.net/message">jouw bericht</a></li>
+<li><a href="http://www.sahararights.net/integrate">Integreer</a> het formulier in je eigen web-pagina</li>
+</ul>
+
 <p>Door <a href="http://www.sahararights.net/message">dit  formulier</a> in te vullen stuur je een email naar de  afgevaardigden van jouw land in het Europese Parlament in je eigen taal.  Schrijf alsjeblieft met respect en helderheid. Het doel van deze  functie is om parlementslid met een uniek berichtje wat door jezelf  geschreven is te bereiken.</p>
 
 <p>Op  10 oktober 2010 begonnen 20.000 Sahrawi's een vreedzaam protest om hun  rechten op werk terug te eisen, om de rechten op hun natuurlijke bronnen  en om niet gediscrimineerd te worden. Dit deden ze door een kamp van  7000 Sahrawi's te maken, 15 kilometer van El Aaiun (Laayoune, de  hoofdstad van de Westelijke Sahara). Dertig dagen later stuurde de  Marokkaanse regering haar leger om het kamp, gelegen bij Agdaym Izik, te  vernietigen. Elf mensen werden gedood, 723 mensen raakten gewond en 159  zijn er vermist. Dit is exclusief de burgers die naar de gevangenis,  ziekenhuizen en legerkampen gestuurd werden.</p>
