--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
         <li><a href="<%= url_for :locale => 'nl' %>">Nederlands</a></li>
         <li><a href="<%= url_for :locale => 'pl' %>">Polski</a></li>
         <li><a href="<%= url_for :locale => 'pt' %>">Português</a></li>
+        <li><a href="<%= url_for :locale => 'vls' %>">Vlaams</a></li>
       </ul>
       <h1><a href="/"><%= APP_CONFIG[:project_name] %></a></h1>
     </div><!-- header -->
