--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
         <li><a href="<%= url_for :locale => 'gr' %>">Ελληνικά</a></li>
         <li><a href="<%= url_for :locale => 'it' %>">Italiano</a></li>
         <li><a href="<%= url_for :locale => 'nl' %>">Nederlands</a></li>
-        <li><a href="<%= url_for :locale => 'pl' %>">Polski</a></li>
+        <li><a href="<%= url_for :locale => 'pl' %>">Polski</a></li><br />
         <li><a href="<%= url_for :locale => 'pt' %>">Português</a></li>
         <li><a href="<%= url_for :locale => 'vls' %>">Vlaams</a></li>
       </ul>
